Fixed Maven version specification and updated it to 3.6.0.

--- a/pom.xml
+++ b/pom.xml
@@ -384,7 +384,7 @@ Sections that did not require modification or management have been removed. Much
                       <version>11.0.1</version>
                     </requireJavaVersion>
                     <requireMavenVersion>
-                      <version>3.5.4</version>
+                      <version>[3.6.0]</version>
                     </requireMavenVersion>
                     <requireUpperBoundDeps />
                     <!-- TODO require release versions during release -->
